--- a/yamls/config.yaml
+++ b/yamls/config.yaml
@@ -1,6 +1,7 @@
 defaults:
   - _self_
   - train: 000_baseline
+  - lgb: lgb100
   - override hydra/job_logging: none # hydraで自動的にログファイルが生成されるのを防ぐ
 
 debug: False
