--- a/yamls/config.yaml
+++ b/yamls/config.yaml
@@ -3,6 +3,7 @@ defaults:
   - train: 000_baseline
   - lgb: lgb100
   - combine: combine300
+  - surprise: surprise010
   - override hydra/job_logging: none # hydraで自動的にログファイルが生成されるのを防ぐ
 
 debug: False
