--- a/yamls/lgb/lgb200_014.yaml
+++ b/yamls/lgb/lgb200_014.yaml
@@ -1,4 +1,4 @@
-id: lgb200_011
+id: lgb200_014
 
 feats:
   num:
@@ -10,6 +10,10 @@ feats:
     - other_string
     - string_len
     - implicit_factors
+    - implicit_factors_logistic_matrix_factor
+    - implicit_factors_bpr
+    - multi_hot_features
+    - implicit_factors_bpr_svd
   cat:
     - categorical_label_encoded # categorical_label_encoded_with_user
   models:  # 学習済みモデルの結果を使う
