--- a/yamls/nn/nn040_001.yaml
+++ b/yamls/nn/nn040_001.yaml
@@ -1,5 +1,4 @@
-id: lgb200_012
-
+id: nn040_001
 feats:
   num:
     - duration_episodes #duration
@@ -12,30 +11,19 @@ feats:
     - implicit_factors
     - implicit_factors_logistic_matrix_factor
     - implicit_factors_bpr
-  cat:
-    - categorical_label_encoded # categorical_label_encoded_with_user
+    - multi_hot_features
+  cat: []
   models:  # 学習済みモデルの結果を使う
     - 020_surprise_unseen/d97af2c0 # 1.441 KNNBaseline
     - 020_surprise_unseen/5e4526f8 # 1.442 SVD
     - 020_surprise_unseen/4ed7afa2 # 1.441
+    
+    
+num_epochs: 30
+early_stopping: 10
 
+lr: 0.002
+batch_size: 256
+num_layers: 3
 target_name: score
 num_folds : 5
-
-params: 
-  objective: regression
-  metric: rmse
-  verbosity: -1
-  boosting_type: gbdt
-  learning_rate: 0.02
-  num_leaves: 64
-  min_child_samples: 160
-  max_depth: -1
-  subsample_freq: 0
-  bagging_seed: 0
-  feature_fraction: 0.9
-  bagging_fraction: 0.8
-  reg_alpha: 0.1
-  reg_lambda: 0.1
-  max_bin: 200
-  device: gpu  # Use GPU
