--- a/yamls/lgb/lgb200_016.yaml
+++ b/yamls/lgb/lgb200_016.yaml
@@ -18,7 +18,7 @@ feats:
   models:  # 学習済みモデルの結果を使う
     - 020_surprise_unseen/d97af2c0 # 1.441 KNNBaseline
     - 020_surprise_unseen/5e4526f8 # 1.442 SVD
-    - 020_surprise_unseen/4ed7afa2 # 1.441
+    - 020_surprise_unseen/4ed7afa2 # 1.441 BaselineOnly
     - 040_nn_unseen/1d5e8956 # 1.3993705530632756 NN
 
 target_name: score
