--- a/yamls/nn/nn031_006.yaml
+++ b/yamls/nn/nn031_006.yaml
@@ -1,5 +1,5 @@
 
-id: lgb100_013
+id: nn031_005
 feats:
   num:
     - duration_episodes #duration
@@ -13,9 +13,9 @@ feats:
     - implicit_factors_logistic_matrix_factor
     - implicit_factors_bpr
     - multi_hot_features
-  cat:
-    - categorical_label_encoded_with_user # categorical_label_encoded
-  models: # [] # 学習済みモデルの結果を使う
+    - categorical_label_encoded_with_user
+  cat: []
+  models:  # 学習済みモデルの結果を使う
     - 010_surprise/4b84f9aa # 1.191 SVDpp
     - 010_surprise/277704d6 # 1.203 SVD
     - 010_surprise/bad2980e # 1.202 KNNWithZScore
@@ -28,23 +28,12 @@ feats:
     - 000_baseline/8d9ed97c
 
 
+num_epochs: 50
+early_stopping: 10
+weight_decay: 1e-6
+dropout_rate: 0.3
+lr: 0.002
+batch_size: 256
+num_layers: 5
 target_name: score
 num_folds : 5
-
-params: 
-  objective: regression
-  metric: rmse
-  verbosity: -1
-  boosting_type: gbdt
-  learning_rate: 0.05
-  num_leaves: 64
-  min_child_samples: 160
-  max_depth: -1
-  subsample_freq: 0
-  bagging_seed: 0
-  feature_fraction: 0.9
-  bagging_fraction: 0.8
-  reg_alpha: 0.1
-  reg_lambda: 0.1
-  max_bin: 200
-  device: gpu  # Use GPU
