--- a/yamls/lgb/lgb100_015.yaml
+++ b/yamls/lgb/lgb100_015.yaml
@@ -1,5 +1,5 @@
 
-id: lgb100_014
+id: lgb100_015
 feats:
   num:
     - duration_episodes #duration
@@ -15,17 +15,7 @@ feats:
     - multi_hot_features
   cat:
     - categorical_label_encoded_with_user # categorical_label_encoded
-  models: # [] # 学習済みモデルの結果を使う
-    - 010_surprise/4b84f9aa # 1.191 SVDpp
-    - 010_surprise/277704d6 # 1.203 SVD
-    - 010_surprise/bad2980e # 1.202 KNNWithZScore
-    - 010_surprise/51c879fa # 1.209 KNNWithMeans
-    - 010_surprise/f01160fa # 1.319 KNNBasic
-    - 010_surprise/cc507138 # 1.21 BaselineOnly
-    - 010_surprise/7027401c # 1.199 SlopeOne
-    - 010_surprise/bbcd9cce # 1.319 KNNBasic
-    - 010_surprise/ff720d44 # 1.24 CoClustering
-    - 000_baseline/8d9ed97c
+  models: [] # 学習済みモデルの結果を使う
 
 
 target_name: score
@@ -36,7 +26,7 @@ params:
   metric: rmse
   verbosity: -1
   boosting_type: gbdt
-  learning_rate: 0.02
+  learning_rate: 0.05
   num_leaves: 188
   min_child_samples: 60
   max_depth: -1
