--- a/yamls/nn/nn040_009.yaml
+++ b/yamls/nn/nn040_009.yaml
@@ -1,5 +1,5 @@
 
-id: nn040_004
+id: nn040_009
 feats:
   num:
     - duration_episodes #duration
@@ -9,10 +9,8 @@ feats:
     - japanese_name
     - other_string
     - string_len
-    - implicit_factors
-    - implicit_factors_logistic_matrix_factor
-    - implicit_factors_bpr
     - multi_hot_features
+    - lightgcn_embedding
   cat: []
   models:  # 学習済みモデルの結果を使う
     - 020_surprise_unseen/d97af2c0 # 1.441 KNNBaseline
