--- a/yamls/combine/combine309.yaml
+++ b/yamls/combine/combine309.yaml
@@ -5,7 +5,8 @@ seen:
   - 010_surprise/4b84f9aa # 1.191 SVDpp
 
 unseen:
-  - 201_stratify/a0afcee0 # 1.377
+  - 201_stratify_importance/950741e2 # 1.3659
   - 041_nn_unseen_scheduler/81fb0f42 # 1.384 NN
+  - 042_nn/3c02d842 # 1.385029073565259 NN
   - 020_surprise_unseen/4ed7afa2 # 1.441 BaselineOnly
 
