--- a/yamls/combine/combine310.yaml
+++ b/yamls/combine/combine310.yaml
@@ -1,6 +1,7 @@
 seen:
   - 100_lgb/a47bfbf2 # 1.10106 lgb
   - 100_lgb/3b021e78 # 1.11
+  - 100_lgb/0990a068 # 1.141
   - 000_baseline/4b1b03e6  #1.155 LightGCN
   - 000_baseline/b3d8715a # 1.172 LightGCN layer 2
   # - 033_nn/1ba19fea # 1.147 NN
@@ -9,6 +10,7 @@ seen:
 
 unseen:
   - 201_stratify_importance/950741e2 # 1.3659
+  - 201_stratify_importance/ec100242
   - 041_nn_unseen_scheduler/81fb0f42 # 1.384 NN
   - 042_nn/3c02d842 # 1.385029073565259 NN
   # - 020_surprise_unseen/4ed7afa2 # 1.441 BaselineOnly
