--- a/yamls/combine/combine310.yaml
+++ b/yamls/combine/combine310.yaml
@@ -1,12 +1,13 @@
 seen:
+  - 101_lgb_target/8331ef28 # 1.116 target encode lgb
   - 100_lgb/a47bfbf2 # 1.10106 lgb
   - 100_lgb/3b021e78 # 1.11
   - 100_lgb/0990a068 # 1.141
   - 100_lgb/4a6eb5cc
   - 000_baseline/4b1b03e6  #1.155 LightGCN
   - 000_baseline/b3d8715a # 1.172 LightGCN layer 2
-  # - 033_nn/1ba19fea # 1.147 NN
-  # - 033_nn/075770b2 # 1.161 NN
+  - 034_nn/ac24d22c # 1.143
+  #- 033_nn/1ba19fea # 1.147 NN
   - 010_surprise/4b84f9aa # 1.191 SVDpp
 
 unseen:
@@ -16,4 +17,4 @@ unseen:
   - 041_nn_unseen_scheduler/81fb0f42 # 1.384 NN
   - 042_nn/3c02d842 # 1.385029073565259 NN
   # - 020_surprise_unseen/4ed7afa2 # 1.441 BaselineOnly
-  - 050_set_transformer/4d2e1dce #  1.4293341993855615
+  # - 050_set_transformer/4d2e1dce #  1.4293341993855615
