--- a/yamls/combine/combine310.yaml
+++ b/yamls/combine/combine310.yaml
@@ -1,5 +1,6 @@
 seen:
   - 101_lgb_target/8331ef28 # 1.116 target encode lgb
+  - 101_lgb_target/35bc4eb6 # 1.10336 target
   - 100_lgb/a47bfbf2 # 1.10106 lgb
   - 100_lgb/3b021e78 # 1.11
   - 100_lgb/0990a068 # 1.141
