--- a/yamls/lgb/base002.yaml
+++ b/yamls/lgb/base002.yaml
@@ -1,6 +1,5 @@
 
-# id: lgb100_019
-id: lgb101_002
+id: base001
 feats:
   num:
     - duration_episodes #duration
@@ -10,12 +9,9 @@ feats:
     - japanese_name
     - other_string
     - string_len
-    - implicit_factors
-    - implicit_factors_logistic_matrix_factor
     - implicit_factors_bpr
-    - multi_hot_features
-    - lightgcn_embedding
-    - svd_lightgcn_embedding
+    - implicit_factors_bpr_agg
+    - multi_hot_features_high_hop
     - user_num_high_hop_second
   cat:
     - categorical_label_encoded_with_user # categorical_label_encoded
@@ -30,7 +26,7 @@ params:
   metric: rmse
   verbosity: -1
   boosting_type: gbdt
-  learning_rate: 0.02
+  learning_rate: 0.05
   num_leaves: 252
   min_child_samples: 66
   max_depth: -1
