--- a/yamls/gcn/gcn060_003.yaml
+++ b/yamls/gcn/gcn060_003.yaml
@@ -1,5 +1,5 @@
 
-id: gcn060_002
+id: gcn060_003
 feats:
   num:
     - duration_episodes #duration
@@ -9,13 +9,8 @@ feats:
     - japanese_name
     - other_string
     - string_len
-    - implicit_factors
-    - implicit_factors_logistic_matrix_factor
     - implicit_factors_bpr
     - multi_hot_features
-    - lightgcn_embedding
-    - svd_lightgcn_embedding
-    - user_num_high_hop_second
     
   cat: []
   models:  []
@@ -24,7 +19,7 @@ feats:
 num_epochs: 1000
 early_stopping: 50
 lr: 0.002
-num_layers: 2
-hidden_channels: 256
+num_layers: 4
+hidden_channels: 256 # 256
 target_name: score
 num_folds : 5
