--- a/yamls/combine/combine311.yaml
+++ b/yamls/combine/combine311.yaml
@@ -1,15 +1,15 @@
 seen:
+  - 000_baseline/f41f4108 # 1.1467421499361026 lightgcn
+  
   - 101_lgb_target/8331ef28 # 1.116 target encode lgb
   - 101_lgb_target/35bc4eb6 # 1.10336 target
   - 100_lgb/a47bfbf2 # 1.10106 lgb
   - 100_lgb/a7e26006 # 1.10375 lgb
   - 100_lgb/3b021e78 # 1.11
-  - 100_lgb/0990a068 # 1.141
-  - 061_gcn/09dd3c62 # 1.147
-  - 000_baseline/4b1b03e6  #1.155 LightGCN
-  - 000_baseline/b3d8715a # 1.172 LightGCN layer 2
-  - 034_nn/ac24d22c # 1.143
-  - 010_surprise/4b84f9aa # 1.191 SVDpp
+  - 061_gcn/09dd3c62 # 1.147 gcn
+  - 062_gcn/2b8ce174 # 1.146 gcn
+  # - 034_nn/ac24d22c # 1.143
+  #- 010_surprise/4b84f9aa # 1.191 SVDpp
 
 unseen:
   - 201_stratify_importance/950741e2 # 1.3659
