--- a/yamls/combine/combine311.yaml
+++ b/yamls/combine/combine311.yaml
@@ -1,5 +1,6 @@
 seen:
   - 000_baseline/f41f4108 # 1.1467421499361026 lightgcn
+  - 000_baseline/7c5ddab4
   
   - 101_lgb_target/8331ef28 # 1.116 target encode lgb
   - 101_lgb_target/35bc4eb6 # 1.10336 target
