--- a/yamls/combine/combine311.yaml
+++ b/yamls/combine/combine311.yaml
@@ -1,23 +1,25 @@
 seen:
   # lightgcn
-  - 000_baseline/f41f4108 # 1.1467421499361026 lightgcn
-  - 000_baseline/7c5ddab4 # 1.147 lightgcn
+  - 000_baseline/14522c68 # 2層 python 000_baseline.py  train=base006
+  # python 000_baseline.py  train=base007
+  - 000_baseline/f41f4108 # 1.1467421499361026 lightgcn layer 5 lr 0.005
+  # - 000_baseline/7c5ddab4 # 1.147 lightgcn layer 5 lr 0.002
+  
   # hetero-gcn
   - 064_gcn/ef59ebd2 # 2層 1.137 python 064_gcn.py gcn=gcn060_005
   - 064_gcn/3992e11c # 2層 1.137 python 064_gcn.py gcn=gcn060_006 
   - 064_gcn/380d2a1a # 2層 20fold python 064_gcn.py gcn=gcn060_008
   - 064_gcn/0253280e # 5層 python 064_gcn.py gcn=gcn060_007
-  #  python 064_gcn.py gcn=gcn060_007
 
   # lgb
-  - 101_lgb_target/8331ef28 # 1.116 target encode lgb
-  - 101_lgb_target/35bc4eb6 # 1.10336 target
   - 100_lgb/a47bfbf2 # 1.10106 lgb
   - 100_lgb/a7e26006 # 1.10375 lgb
   - 100_lgb/3b021e78 # 1.11
+  - 101_lgb_target/8331ef28 # 1.116 target encode lgb
+  - 101_lgb_target/35bc4eb6 # 1.10336 target
   
   # - 034_nn/ac24d22c # 1.143
-  # - 011_svdpp/5719419e # 1.186 SVDpp
+  # - 011_svdpp/19de0d2e # 1.165 SVDpp python 011_svdpp.py surprise=surprise011
 
 unseen:
   - 201_stratify_importance/950741e2 # 1.3659
