--- a/yamls/combine/combine312.yaml
+++ b/yamls/combine/combine312.yaml
@@ -7,7 +7,7 @@ seen:
   - 100_lgb/a47bfbf2 # 1.10106 lgb
   - 100_lgb/a7e26006 # 1.10375 lgb
   - 100_lgb/3b021e78 # 1.11
-  #- 101_lgb_target/8331ef28 # 1.116 target encode lgb
+  - 101_lgb_target/8331ef28 # 1.116 target encode lgb
   
   # - 034_nn/ac24d22c # 1.143
   # - 011_svdpp/19de0d2e # 1.165 SVDpp python 011_svdpp.py surprise=surprise011
