--- a/yamls/combine/combine314.yaml
+++ b/yamls/combine/combine314.yaml
@@ -1,29 +1,29 @@
 seen:
   # lightgcn
-  - 000_baseline/14522c68 # 1.145 2層 python 000_baseline.py  train=base006
+  #- 000_baseline/14522c68 # 1.145 2層 python 000_baseline.py  train=base006
   - 000_baseline/6dd50b78 # 1.145 5層 python 000_baseline.py  train=base007
 
   # hetero-gcn
-  - 064_gcn/ef59ebd2 # 2層 1.137 python 064_gcn.py gcn=gcn060_005
-  - 064_gcn/3992e11c # 2層 1.137 python 064_gcn.py gcn=gcn060_006 
+  #- 064_gcn/ef59ebd2 # 2層 1.137 python 064_gcn.py gcn=gcn060_005
+  #- 064_gcn/3992e11c # 2層 1.137 python 064_gcn.py gcn=gcn060_006 
   - 064_gcn/380d2a1a # 2層 20fold python 064_gcn.py gcn=gcn060_008
   - 064_gcn/0253280e # 5層 python 064_gcn.py gcn=gcn060_007
 
   # lgb
   - 100_lgb/a47bfbf2 # 1.10106 lgb
-  - 100_lgb/a7e26006 # 1.10375 lgb
-  - 100_lgb/3b021e78 # 1.11
-  - 101_lgb_target/8331ef28 # 1.116 target encode lgb
+  #- 100_lgb/a7e26006 # 1.10375 lgb
+  #- 100_lgb/3b021e78 # 1.11
+  #- 101_lgb_target/8331ef28 # 1.116 target encode lgb
   - 101_lgb_target/35bc4eb6 # 1.10336 target
   
   # - 034_nn/ac24d22c # 1.143
   # - 011_svdpp/19de0d2e # 1.165 SVDpp python 011_svdpp.py surprise=surprise011
 
 unseen:
-  - 201_stratify_importance/950741e2 # 1.3659
-  - 201_stratify_importance/a8411db8 # 1.367
+  #- 201_stratify_importance/950741e2 # 1.3659
+  #- 201_stratify_importance/a8411db8 # 1.367
   - 201_stratify_importance/80fa656c # 1.36364
-  - 201_stratify_importance/d56c02ca # 1.364 python 201_stratify_importance.py lgb=lgb200_030
+  #- 201_stratify_importance/d56c02ca # 1.364 python 201_stratify_importance.py lgb=lgb200_030
   - 201_stratify_importance/3b936df6 # 1.36179  python 201_stratify_importance.py lgb=lgb200_031
   - 202_target/c982c60e # target encode lgb 1.36336
   # python 202_target.py lgb=lgb200_030
