--- a/yamls/combine/combine323.yaml
+++ b/yamls/combine/combine323.yaml
@@ -21,7 +21,7 @@ seen:
   - 101_lgb_target/35bc4eb6 # 1.10336 target  
   - 101_lgb_target/718c9a84 # python 101_lgb_target.py lgb=lgb100_021
 
-  - 100_lgb/b89f04f0 # 強い
+  - 100_lgb/b89f04f0 # 強い python 100_lgb.py lgb=lgb100_021 seed=12
 
   # nn
   - 034_nn/ac24d22c # 1.143
@@ -32,6 +32,7 @@ seen:
   - 031_nn_seen_scheduler/a80961ee # 1.22
   - 034_nn/2b1f3e2a # 1.143  python 034_nn.py nn=nn034_001 seed=9
   - 034_nn/94eb9176 # 1.138 python 034_nn.py nn=nn034_002 seed=16
+  - 034_nn/9ff79d76 # python 034_nn.py nn=nn034_003 seed=17
 
   # surprise
   - 011_svdpp/19de0d2e # 1.165 SVDpp python 011_svdpp.py surprise=surprise011
@@ -42,6 +43,8 @@ seen:
   - 010_surprise/cc507138 # 1.21 BaselineOnly
   - 010_surprise/7027401c # 1.199 SlopeOne
   - 010_surprise/ff720d44 # 1.24 CoClustering
+
+
 unseen:
   - 201_stratify_importance/950741e2 # 1.3659
   - 201_stratify_importance/a8411db8 # 1.367
@@ -77,5 +80,5 @@ unseen:
   #- 020_surprise_unseen/72a42a50 # 1.563 KNNBasic
   - 080_tvttformer_unseen/808a63d8
 
-# predicted score2: 1.1420587117670442
-# predicted score2: 1.1427519282754885 (group)
+# predicted score2: 1.1419861923087442
+# predicted score2: 1.1426794528117545
