--- a/yamls/combine/combine330.yaml
+++ b/yamls/combine/combine330.yaml
@@ -44,6 +44,35 @@ seen:
   - 010_surprise/7027401c # 1.199 SlopeOne
   - 010_surprise/ff720d44 # 1.24 CoClustering
 
+  - 201_stratify_importance/950741e2 # 1.3659
+  - 201_stratify_importance/a8411db8 # 1.367
+  - 201_stratify_importance/80fa656c # 1.36364
+  - 201_stratify_importance/d56c02ca # 1.364 python 201_stratify_importance.py lgb=lgb200_030
+  - 201_stratify_importance/3b936df6 # 1.36179  python 201_stratify_importance.py lgb=lgb200_031
+  - 202_target/c982c60e # target encode lgb 1.36336
+  - 202_target/330c67fe # 1.36089  python 202_target.py lgb=lgb200_031
+  - 200_lgb/c9ea8a8e
+  - 201_stratify/beb72cfa
+
+  # nn
+  - 042_nn/003fdb90 # 1.402
+  - 041_nn_unseen_scheduler/81fb0f42 # 1.384 NN
+  - 042_nn/3c02d842 # 1.385029073565259 NN
+  - 041_nn_unseen_scheduler/efd018ec
+  - 041_nn_unseen_scheduler/a7e1bb00
+  - 041_nn_unseen_scheduler/c631bc88
+  - 042_nn/858cd5e6 #  python 042_nn.py nn=nn042_003 seed=8
+  # st
+  - 050_set_transformer/4d2e1dce #  1.4293341993855615
+
+  # surprise
+  - 020_surprise_unseen/4ed7afa2 # 1.441 BaselineOnly
+  - 020_surprise_unseen/2cea0176 # 1.563 CoClustering
+  - 020_surprise_unseen/d97af2c0 # 1.441 KNNBaseline
+  - 020_surprise_unseen/78c0b3a2 # 1.563 SlopeOne
+  - 020_surprise_unseen/8275dac2 # 1.447 SVDpp
+  - 020_surprise_unseen/5e4526f8 # 1.442 SVD
+  - 080_tvttformer_unseen/808a63d8
 
 unseen:
   - 201_stratify_importance/950741e2 # 1.3659
@@ -74,11 +103,6 @@ unseen:
   - 020_surprise_unseen/78c0b3a2 # 1.563 SlopeOne
   - 020_surprise_unseen/8275dac2 # 1.447 SVDpp
   - 020_surprise_unseen/5e4526f8 # 1.442 SVD
-  #- 020_surprise_unseen/53aa74ea # 1.563 NMF
-  #- 020_surprise_unseen/0ccfa6ae #1.563 KNNWithZScore
-  #- 020_surprise_unseen/bda353f0 # 1.563 KNNWithMeans
-  #- 020_surprise_unseen/72a42a50 # 1.563 KNNBasic
-  
   - 080_tvttformer_unseen/808a63d8
 
 # predicted score2: 1.1418757680829652
