--- a/yamls/combine/combine325.yaml
+++ b/yamls/combine/combine325.yaml
@@ -1,13 +1,17 @@
 seen:
   # lightgcn
   - 000_baseline/14522c68 # 1.145 2層 python 000_baseline.py  train=base006
+  - 000_baseline/8465fe04 # 1.145 python 000_baseline.py  train=base006 seed=2
   - 000_baseline/6dd50b78 # 1.145 5層 python 000_baseline.py  train=base007
+  - 000_baseline/c3a00906
+  - 000_baseline/d0c3893e
 
   # hetero-gcn
   - 064_gcn/ef59ebd2 # 2層 1.137 python 064_gcn.py gcn=gcn060_005
   - 064_gcn/3992e11c # 2層 1.137 python 064_gcn.py gcn=gcn060_006 
   - 064_gcn/380d2a1a # 2層 20fold python 064_gcn.py gcn=gcn060_008
   - 064_gcn/0253280e # 5層 python 064_gcn.py gcn=gcn060_007
+  - 064_gcn/61424f48 # 1.13614 python 064_gcn.py gcn=gcn060_006 seed=10
 
   # lgb
   - 100_lgb/a47bfbf2 # 1.10106 lgb
@@ -16,14 +20,21 @@ seen:
   - 100_lgb/43bd8ccc # 1.095 lgb python 100_lgb.py lgb=lgb100_021 
   - 101_lgb_target/8331ef28 # 1.116 target encode lgb
   - 101_lgb_target/35bc4eb6 # 1.10336 target  
-  - 034_nn/ac24d22c # 1.143
+  - 101_lgb_target/718c9a84 # python 101_lgb_target.py lgb=lgb100_021
+  - 100_lgb/b89f04f0 # 強い python 100_lgb.py lgb=lgb100_021 seed=12
+  - 101_lgb_target/c6f6abd2 #  python 101_lgb_target.py lgb=lgb100_021 seed=14
+  - 101_lgb_target_epoch/1eacb69e # python 101_lgb_target_epoch.py lgb=lgb100_023 seed=19
 
+  # nn
+  - 034_nn/ac24d22c # 1.143
   - 034_nn/7690d61a # 1.161
   - 033_nn/1ba19fea # 1.147
   - 031_nn_seen_scheduler/60d2e178  # 1.165
   - 031_nn_seen_scheduler/a766a70c # 1.226
   - 031_nn_seen_scheduler/a80961ee # 1.22
-  - 101_lgb_target/718c9a84 # python 101_lgb_target.py lgb=lgb100_021
+  - 034_nn/2b1f3e2a # 1.143  python 034_nn.py nn=nn034_001 seed=9
+  - 034_nn/94eb9176 # 1.138 python 034_nn.py nn=nn034_002 seed=16
+  - 034_nn/9ff79d76 # python 034_nn.py nn=nn034_003 seed=17
 
   # surprise
   - 011_svdpp/19de0d2e # 1.165 SVDpp python 011_svdpp.py surprise=surprise011
@@ -34,6 +45,8 @@ seen:
   - 010_surprise/cc507138 # 1.21 BaselineOnly
   - 010_surprise/7027401c # 1.199 SlopeOne
   - 010_surprise/ff720d44 # 1.24 CoClustering
+
+
 unseen:
   - 201_stratify_importance/950741e2 # 1.3659
   - 201_stratify_importance/a8411db8 # 1.367
@@ -41,9 +54,19 @@ unseen:
   - 201_stratify_importance/d56c02ca # 1.364 python 201_stratify_importance.py lgb=lgb200_030
   - 201_stratify_importance/3b936df6 # 1.36179  python 201_stratify_importance.py lgb=lgb200_031
   - 202_target/c982c60e # target encode lgb 1.36336
-  - 202_target/330c67fe # python 202_target.py lgb=lgb200_031　1.36089
+  - 202_target/330c67fe # 1.36089  python 202_target.py lgb=lgb200_031
+  - 200_lgb/c9ea8a8e
+  - 201_stratify/beb72cfa
+
+  # nn
+  - 042_nn/003fdb90 # 1.402
   - 041_nn_unseen_scheduler/81fb0f42 # 1.384 NN
   - 042_nn/3c02d842 # 1.385029073565259 NN
+  - 041_nn_unseen_scheduler/efd018ec
+  - 041_nn_unseen_scheduler/a7e1bb00
+  - 041_nn_unseen_scheduler/c631bc88
+  - 042_nn/858cd5e6 #  python 042_nn.py nn=nn042_003 seed=8
+  # st
   - 050_set_transformer/4d2e1dce #  1.4293341993855615
 
   # surprise
@@ -58,4 +81,7 @@ unseen:
   #- 020_surprise_unseen/bda353f0 # 1.563 KNNWithMeans
   #- 020_surprise_unseen/72a42a50 # 1.563 KNNBasic
   
-# predicted score2: 1.1447353013220625
+  - 080_tvttformer_unseen/808a63d8
+
+# predicted score2: 1.1411800471157876
+# predicted score2: 1.1418737970500672
